--- a/assets/scss/content.scss
+++ b/assets/scss/content.scss
@@ -33,6 +33,8 @@
 	#content .photo {
 		float: left;
 		margin: 20px 0px 0px 20px;
+		width: 200px;
+		height: 200px;
 		background-color: $cForeground;
 		border: 8px solid $cForeground;
 		box-shadow: 0px 0px 0px 1px black(.1);
