Redirect user to PayPal, button.coffee, get link for album and photos

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -92,6 +92,7 @@ header {
 		background-color: $cMain;
 		border-radius: 5px;
 		cursor: pointer;
+		display: none;
 
 		@include vendorize(transition, background-color $duration);
 
