Use blue as button style in basicModal

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,9 @@
 /* SASS ------------------------------------------------ */
 @import 'basics';
 
+/* basicModal ------------------------------------------------ */
+@import '../../bower_components/basicModal/src/scss/main.scss';
+
 /* Body ------------------------------------------------- */
 html, body {
 	height: 100%;
