--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -80,6 +80,11 @@ header {
 		}
 
 	/* Buy ------------------------------------------------- */
+	img.paymentIcon {
+		float: right;
+		margin: 19px 0 0 5px;
+	}
+
 	header a#buy {
 		float: right;
 		margin: 14px;
@@ -87,33 +92,32 @@ header {
 		color: white(1);
 		text-decoration: none;
 		background-color: $cMain;
-		border-radius: 5px;
+		background-image: linear-gradient(to bottom, $cMain, darken($cMain, 6%));
+		box-shadow: 0 1px 2px black(.1);
+		border-radius: 100px;
 		cursor: pointer;
 		display: none;
 
 		@include vendorize(transition, background-color $duration);
-
-		&.error {
-			background-color: #BD3737;
-		}
 
 		span.icon {
 			margin-right: 6px;
 		}
 
 		&:hover {
-			background-color: darken($cMain, 5%);
-		}
-
-		&.error:hover {
-			background-color: darken(#BD3737, 5%);
+			background-color: lighten($cMain, 5%);
+			background-image: linear-gradient(to bottom, lighten($cMain, 5%), $cMain);
 		}
 
 		&:active {
-			background-color: lighten($cMain, 5%);
+			background-color: darken($cMain, 5%);
+			background-image: linear-gradient(to bottom, darken($cMain, 5%), darken($cMain, 10%));
 		}
 
+		&.error,
+		&.error:hover,
 		&.error:active {
-			background-color: lighten(#BD3737, 5%);
+			background-color: #BD3737;
+			background-image: linear-gradient(to bottom, #BD3737, darken(#BD3737, 6%));
 		}
 	}
