--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -8,6 +8,11 @@ header {
 	background-color: $cForeground;
 	border-bottom: 1px solid black(.15);
 	z-index: 2;
+	opacity: 0;
+
+	&.show {
+		opacity: 1;
+	}
 }
 
 	/* About ------------------------------------------------- */
