--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -24,6 +24,10 @@
 /* Content ------------------------------------------------- */
 #content {
 	padding-top: 60px;
+
+	@include breakpoint('medium') {
+		padding-top: 140px;
+	}
 }
 
 	/* Photos ------------------------------------------------- */
