--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -10,6 +10,10 @@ header {
 	z-index: 2;
 	opacity: 0;
 
+	@include breakpoint('medium') {
+		height: 140px;
+	}
+
 	&.show {
 		opacity: 1;
 	}
@@ -20,8 +24,12 @@ header {
 		float: left;
 		margin: 14px 18px 14px 14px;
 
-		@media screen and (max-width: $break) {
-			display: none !important;
+		@include breakpoint('medium') {
+			width: 100%;
+			padding-bottom: 10px;
+			margin: 10px 0 0 0;
+			border-bottom: 1px solid #eee;
+			text-align: center;
 		}
 	}
 
@@ -31,6 +39,11 @@ header {
 			height: 32px;
 			background-color: black(.1);
 			border-radius: 100px;
+
+			@include breakpoint('medium') {
+				float: none;
+				display: inline-block;
+			}
 		}
 
 		header #about h1#name {
@@ -40,6 +53,14 @@ header {
 			font-size: 16px;
 			font-weight: 400;
 			color: black(.8);
+
+			@include breakpoint('medium') {
+				float: none;
+				display: block;
+				margin: 7px 0 0;
+				width: 100%;
+				text-align: center;
+			}
 		}
 
 	/* Close ------------------------------------------------- */
@@ -63,10 +84,11 @@ header {
 	/* Menu ------------------------------------------------- */
 	header menu {
 		float: left;
-		padding: 8px 0px 8px 18px;
+		padding: 8px 0 8px 18px;
 		border-left: 1px black(.1) solid;
 
-		@media screen and (max-width: $break) {
+		@include breakpoint('medium') {
+			padding: 7px 0 8px 18px;
 			border-left: none;
 		}
 	}
