Optimized for small screens #1

--- a/assets/scss/_view.scss
+++ b/assets/scss/_view.scss
@@ -51,4 +51,8 @@
 		background-size: contain;
 
 		@include vendorize(animation, zoomIn $duration $timing);
+
+		@include breakpoint('medium') {
+			top: 170px;
+		}
 	}
