--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -5,7 +5,7 @@ header {
 	left: 0px;
 	right: 0px;
 	height: 60px;
-	background-color: $cForeground;
+	background-color: rgba($cForeground, .98);
 	border-bottom: 1px solid black(.15);
 	z-index: 2;
 	opacity: 0;
@@ -25,11 +25,19 @@ header {
 		margin: 14px 18px 14px 14px;
 
 		@include breakpoint('medium') {
+			float: none;
 			width: 100%;
-			padding-bottom: 10px;
-			margin: 10px 0 0 0;
+			margin: 0;
 			border-bottom: 1px solid #eee;
 			text-align: center;
+		}
+
+		&.hidden {
+			display: none;
+
+			@include breakpoint('medium') {
+				display: block;
+			}
 		}
 	}
 
@@ -43,6 +51,7 @@ header {
 			@include breakpoint('medium') {
 				float: none;
 				display: inline-block;
+				margin: 10px 0 0 0;
 			}
 		}
 
@@ -57,7 +66,7 @@ header {
 			@include breakpoint('medium') {
 				float: none;
 				display: block;
-				margin: 7px 0 0;
+				margin: 7px 0 10px;
 				width: 100%;
 				text-align: center;
 			}
@@ -76,6 +85,10 @@ header {
 		z-index: 1;
 		display: none;
 
+		@include breakpoint(34em) {
+			margin: 13px 18px 14px 14px;
+		}
+
 		& span.icon {
 			margin-right: 6px;
 		}
@@ -84,6 +97,7 @@ header {
 	/* Menu ------------------------------------------------- */
 	header menu {
 		float: left;
+		margin: 14px 0;
 		padding: 8px 0 8px 18px;
 		border-left: 1px black(.1) solid;
 
@@ -91,6 +105,8 @@ header {
 			padding: 7px 0 8px 18px;
 			border-left: none;
 		}
+
+		&.hidden { display: none; }
 	}
 
 		header menu a {
@@ -101,18 +117,25 @@ header {
 
 			@include vendorize(transition, color $duration);
 
-			&:hover {
-				color: black(1);
-			}
+			&:hover { color: black(1); }
 		}
 
 	/* Buy ------------------------------------------------- */
-	img.paymentIcon {
-		float: right;
-		margin: 19px 0 0 5px;
+	#buy_wrapper {
+		margin: 0;
+		padding: 0;
 	}
 
-	header a#buy {
+	#buy_wrapper img.paymentIcon {
+		float: right;
+		margin: 19px 0 0 5px;
+
+		@include breakpoint(34em) {
+			display: none;
+		}
+	}
+
+	#buy_wrapper a#buy {
 		float: right;
 		margin: 14px;
 		padding: 8px 14px;
@@ -126,6 +149,10 @@ header {
 		display: none;
 
 		@include vendorize(transition, background-color $duration);
+
+		@include breakpoint(34em) {
+			margin: 13px 14px;
+		}
 
 		span.icon {
 			margin-right: 6px;
