--- a/assets/scss/redirect.scss
+++ b/assets/scss/redirect.scss
@@ -17,3 +17,29 @@ body {
 	@include vendorize(font-smoothing, antialiased);
 	@include vendorize(user-select, none);
 }
+
+/* Footer ------------------------------------------------- */
+footer {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	padding: 10px 0 12px;
+	width: 100%;
+	border-top: 1px solid black(.15);
+	z-index: 1001;
+}
+
+/* Links ------------------------------------------------- */
+footer a {
+	margin: 0;
+	padding: 5px 0 5px 10px;
+	color: black(.55);
+	font-size: 13px;
+	text-decoration: none;
+
+	@include vendorize(transition, color $duration);
+
+	&:first-child { padding-left: 16px; }
+
+	&:hover { color: black(1); }
+}
